Fixed oversizing cause by menu located out of the viewport

--- a/src/style/taskTemplate.scss
+++ b/src/style/taskTemplate.scss
@@ -75,6 +75,10 @@ iframe {
     padding: 15px 10px;
     letter-spacing: 1px;
     margin-top: -6px;
+
+    // prevent menu from creaating additional space on smartphones
+    overflow-x: hidden;
+
     &::after {
         content: "";
         display: table;
